feat(*): Fix dependencies conflicts

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ python_requires = >=3.9
 install_requires =
     sqlalchemy
     python-dateutil
-    httpx==0.25.1
+    httpx==0.26.*
     dacite
     importlib-metadata
     pyjwt
