--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,9 @@
 [build-system]
 requires = [
     "setuptools>=42",
-    "wheel"
+    "wheel",
+    "setuptools_scm",
 ]
 build-backend = "setuptools.build_meta"
+[tool.setuptools_scm]
+write_to = "src/cscapi/_version.py"
