ci(lint): Add verbosity for black tool

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -30,7 +30,7 @@ jobs:
 
     - name: Lint check
       run: |
-        black --check ./
+        black --check -v ./
 
     - name: Tests
       run: |
