docs(*): Update package description

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = cscapi
 author = CrowdSec
 author_email = core.tech@crowdsec.net
-description = CAPI Client For CrowdSec
+description = CrowdSec SDK for CAPI
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/crowdsecurity/python-capi-sdk
