--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -26,6 +26,12 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Install setuptools
+      if: contains(fromJson('["3.12"]'),matrix.python-version)
+      run: |
+        python -m pip install --upgrade pip setuptools wheel    
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
