ci(test): Add workflow to test sql various engines

--- a/default.env
+++ b/default.env
@@ -1,3 +1,4 @@
-CROWDSEC_TEST_VERSION="dev"
-CROWDSEC_TEST_FLAVORS="full"
-CROWDSEC_TEST_NETWORK="net-test"
+TEST_SQL_ENGINE="sqlite"
+TEST_POSTGRESQL_URL="postgresql+pg8000://db:db@localhost:5432/"
+TEST_MYSQL_URL="mysql+mysqlconnector://db:db@localhost:5432/"
+TEST_MARIADB_URL="mariadb+pymysql://db:db@localhost:5432/"
