ci(test sql): Restrict workflow branch trigger to main

--- a/.github/workflows/sql-storage.yml
+++ b/.github/workflows/sql-storage.yml
@@ -2,7 +2,7 @@ name: Sql storage tests
 
 on:
   push:
-    branches: [ main, feat/add-test-for-sql-database-types ]
+    branches: [ main ]
     paths-ignore:
       - '**.md'
   pull_request:
