feat(storage): Modify get_all_signals to have sent and is_failing param

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ package_dir =
 packages = find:
 python_requires = >=3.9
 install_requires =
-    sqlalchemy
+    sqlalchemy>=1.4
     python-dateutil
     httpx==0.26.*
     dacite
