--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,10 +1,11 @@
 black
 pytest
 pytest-dotenv
-pytest-httpx
+pytest-httpx==0.29.0
 pytest-timeout
 sqlalchemy-utils
 mysql-connector-python
 pymysql
 pg8000
+psutil
 
