--- a/.github/workflows/keepalive.yml
+++ b/.github/workflows/keepalive.yml
@@ -5,7 +5,7 @@ on:
     - cron: '0 3 * * 4'
 
 permissions:
-  contents: write
+  actions: write
 
 jobs:
   keep-alive:
@@ -18,9 +18,7 @@ jobs:
       - name: Clone project files
         uses: actions/checkout@v4
 
-      # keepalive-workflow adds a dummy commit if there's no other action here, keeps
-      # GitHub from turning off tests after 60 days
-      - uses: gautamkrishnar/keepalive-workflow@v1
+      # keepalive-workflow keeps GitHub from turning off tests after 60 days
+      - uses: gautamkrishnar/keepalive-workflow@v2
         with:
-          commit_message: "chore(*): Automated commit to keep the repository active"
           time_elapsed: 50
