--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,7 @@
 [pytest]
 timeout = 60
+log_cli = True
+log_cli_level = INFO
 addopts =
     --pdbcls=IPython.terminal.debugger:Pdb
     --ignore=test/install
