Added mongoengine as optional dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,5 +32,9 @@ install_requires =
     pyjwt
     more-itertools
 
+[options.extras_require]
+mongodb =
+    mongoengine==0.26.0
+
 [options.packages.find]
 where = src
