Fixed tests and removed version from dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ install_requires =
 
 [options.extras_require]
 mongodb =
-    mongoengine==0.26.0
+    mongoengine
 
 [options.packages.find]
 where = src
