ci(mongodb): Add action for MongoDB test

--- a/default.env
+++ b/default.env
@@ -2,3 +2,4 @@ TEST_SQL_ENGINE="sqlite"
 TEST_POSTGRESQL_URL="postgresql+pg8000://db:db@localhost:5432/"
 TEST_MYSQL_URL="mysql+mysqlconnector://db:db@localhost:5432/"
 TEST_MARIADB_URL="mariadb+pymysql://db:db@localhost:5432/"
+TEST_MONGODB_CONNECTION="mongodb://cs:cs@127.0.0.1:27017/cscapi_test"
