--- a/.github/workflows/keepalive.yml
+++ b/.github/workflows/keepalive.yml
@@ -21,4 +21,5 @@ jobs:
       # keepalive-workflow keeps GitHub from turning off tests after 60 days
       - uses: gautamkrishnar/keepalive-workflow@v2
         with:
-          time_elapsed: 50
+          time_elapsed: 30
+          workflow_files: "unittests.yml, mongodb-storage.yml, sql-storage.yml"
