--- a/.github/workflows/doc-links.yml
+++ b/.github/workflows/doc-links.yml
@@ -1,15 +1,16 @@
+name: Documentation links
+
 on:
+  push:
+    branches: [ main ]
   workflow_dispatch:
 
-name: Markdown files test and TOC update
-
 permissions:
-  contents: write
-  pull-requests: write
+  contents: read
 
 jobs:
-  markdown-test-and-update:
-    name: Markdown files test and update
+  markdown-test:
+    name: Markdown files test
     runs-on: ubuntu-latest
     steps:
 
@@ -34,12 +35,3 @@ jobs:
           cd extension
           awesome_bot --files README.md --allow-dupe --allow-redirect --allow 401 --skip-save-results --base-url http://localhost:8080/
           awesome_bot docs/*.md --allow-dupe --allow-redirect --allow 401 --skip-save-results --base-url http://localhost:8080/docs/
-
-      - name: Generate table of contents
-        uses: technote-space/toc-generator@v4
-        with:
-          MAX_HEADER_LEVEL: 5
-          COMMIT_NAME: CrowdSec Dev Bot
-          TARGET_PATHS: 'docs/*.md'
-          CHECK_ONLY_DEFAULT_BRANCH: true
-          CREATE_PR: true
