--- a/.github/workflows/sql-storage.yml
+++ b/.github/workflows/sql-storage.yml
@@ -67,8 +67,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python setup.py install
         python -m pip install -r requirements-dev.txt
+        python -m pip install .
+        
 
     - name: Tests
       run: |
