--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -35,10 +35,18 @@ jobs:
         python -m pip install --upgrade pip setuptools wheel    
 
     - name: Install dependencies
+      if: !contains(fromJson('["3.12"]'),matrix.python-version)
       run: |
         python -m pip install --upgrade pip
         python setup.py install
         python -m pip install -r requirements-dev.txt
+
+    - name: Install dependencies
+      if: contains(fromJson('["3.12"]'),matrix.python-version)
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install -r requirements-dev.txt
+        python -m pip install .
 
     - name: Tests
       run: |
