ci(*): Fix permissions

--- a/.github/workflows/mongodb-storage.yml
+++ b/.github/workflows/mongodb-storage.yml
@@ -13,6 +13,13 @@ on:
   schedule:
     - cron: '30 02 * * THU'
 
+permissions:
+  contents: read
+
+env:
+  # Allow ddev get to use a GitHub token to prevent rate limiting by tests
+  DDEV_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   mongodb-tests:
 
